--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@
 	 
 
 	 #offslide-btn{display:block;}
-	 #offslide{background:white; position:fixed; width:200px; height:100%; left:-100%; opacity:1; display:block;}
+	 #offslide{background:white; position:fixed; width:45%; height:100%; left:-100%; opacity:1; display:block;}
 	 #offslide-h1{position:absolute; font-size:19px; letter-spacing:2px; top:13%; left:-70%; font-family:gothic; font-weight:normal;}
 	 #offslide>button{position:absolute; top:96%; right:3%;}
 	 #hr1{position:absolute; width:100%; height:25%; background:transparent; top:11%; opacity:1; border-top:1px solid rgba(0,0,0,.05);  border-bottom:1px solid rgba(0,0,0,.05);}
